<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4FFC7D9"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/lib1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:backgroundTint="#D696FF"
        android:contentDescription="@string/adj"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textColor="#DCBE0A59"
        android:textColorHighlight="#DCFF63A7"
        android:textColorHint="#DCFF63A7"
        android:textColorLink="#DCFF63A7"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lib2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="149dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#DCFF63A7"
        android:fontFamily="@font/anton"
        android:onClick="sendMessage"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib9" />

    <EditText
        android:id="@+id/lib2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#D696FF"
        android:contentDescription="@string/place"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textColor="#DCBE0A59"
        android:textColorHighlight="#DCFF63A7"
        android:textColorLink="#DCFF63A7"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lib3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib1" />

    <EditText
        android:id="@+id/lib3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#D696FF"
        android:contentDescription="@string/p_noun"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textColor="#DCBE0A59"
        android:textColorHighlight="#DCFF63A7"
        android:textColorLink="#DCFF63A7"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lib4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib2" />

    <EditText
        android:id="@+id/lib4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#D696FF"
        android:contentDescription="@string/feel"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textColor="#DCBE0A59"
        android:textColorHighlight="#DCFF63A7"
        android:textColorLink="#DCFF63A7"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lib5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib3" />

    <EditText
        android:id="@+id/lib5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#D696FF"
        android:contentDescription="@string/noun"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textColor="#DCBE0A59"
        android:textColorHighlight="#DCFF63A7"
        android:textColorLink="#DCFF63A7"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lib6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib4" />

    <EditText
        android:id="@+id/lib6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#D696FF"
        android:contentDescription="@string/adj"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textColor="#DCBE0A59"
        android:textColorHighlight="#DCFF63A7"
        android:textColorLink="#DCFF63A7"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lib7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib5" />

    <EditText
        android:id="@+id/lib7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#D696FF"
        android:contentDescription="@string/p_noun"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textColor="#DCBE0A59"
        android:textColorHighlight="#DCFF63A7"
        android:textColorLink="#DCFF63A7"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lib8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib6" />

    <EditText
        android:id="@+id/lib8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#D696FF"
        android:contentDescription="@string/noun"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textColor="#DCBE0A59"
        android:textColorHighlight="#DCFF63A7"
        android:textColorLink="#DCFF63A7"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lib9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib7" />

    <EditText
        android:id="@+id/lib9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#D696FF"
        android:contentDescription="@string/adj"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textColor="#DCBE0A59"
        android:textColorHighlight="#DCFF63A7"
        android:textColorLink="#DCFF63A7"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib8" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/chivo"
        android:text="@string/adj"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/lib1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/chivo"
        android:text="@string/place"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/lib2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/chivo"
        android:text="@string/p_noun"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/lib3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/chivo"
        android:text="@string/feel"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toStartOf="@+id/lib4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/chivo"
        android:text="@string/noun"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toStartOf="@+id/lib5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/chivo"
        android:text="@string/adj"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toStartOf="@+id/lib6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/chivo"
        android:text="@string/p_noun"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toStartOf="@+id/lib7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/chivo"
        android:text="@string/noun"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintEnd_toStartOf="@+id/lib8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/chivo"
        android:text="@string/adj"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/lib9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

</androidx.constraintlayout.widget.ConstraintLayout>